Nav creation in HTML, links need to be created, but nav set up

--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
         <![endif]-->
 
         <main class="site">
-            
+            <header class="header">
+                <h1>"Never pet a burning dog"</h1>
+                <h2>And other tips your waitress would prefer to money...
+            <section class="navigation">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="">Events Calendar</a></li>
+                        <li><a href="">Entertainment</a></li>
+                        <li><a href="">Social Media</a></li>
+                        <li><a href="">Sports</a></li>
+                        <li><a href="">Private Events</a></li>
+                        <li><a href="">Special Offers</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </section>
         </main>
         <section <!-- /scripts /-->>
             <script src="js/vendor/modernizr-3.5.0.min.js"></script>
