--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 
         <main class="site">
             <header class="header">
-                <h1>"Never pet a burning dog"</h1>
-                <h2>And other tips your waitress would prefer to money...
+                <h1>Ozzie's</h1>
+                <h2>
+                    Five Star Dive Bar
+                    <br>
+                    <pre>Queen Anne | Seattle</pre>
+                </h2>
             <section class="navigation">
                 <nav>
                     <ul>
@@ -45,7 +49,7 @@
                 </nav>
             </section>
         </main>
-        <section <!-- /scripts /-->>
+        <section <!-- /scripts /-->
             <script src="js/vendor/modernizr-3.5.0.min.js"></script>
             <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
