Fixed nav layout issue, reworked header to incorporate current image, ready to begin adding content

--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
 
         <main class="site">
             <header class="header">
-                <h1>Ozzie's</h1>
+                <img src="img/ozzies-logo-5star-updated-9-2016.jpg" alt="Ozzies Bar Logo">
+                <!-- <h1>Ozzie's</h1>
                 <h2>
                     Five Star Dive Bar
                     <br>
                     <pre>Queen Anne | Seattle</pre>
-                </h2>
+                </h2> -->
+            </header>
             <section class="navigation">
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li id="currentpage"><a href="index.html">Home</a></li>
                         <li><a href="">Events Calendar</a></li>
                         <li><a href="">Entertainment</a></li>
                         <li><a href="">Social Media</a></li>
@@ -48,6 +50,7 @@
                     </ul>
                 </nav>
             </section>
+
         </main>
         <section <!-- /scripts /-->
             <script src="js/vendor/modernizr-3.5.0.min.js"></script>
