Updates to CSS and content.  Swapped red for black background, added content on the index page, need to tweak formatting

--- a/index.html
+++ b/index.html
@@ -50,7 +50,28 @@
                     </ul>
                 </nav>
             </section>
-
+        <div class="sec1">
+            <h2>
+                Welcome to Ozzie's Five Star Dive Bar!
+            </h2>
+            <p>
+                Ozzie's has been a staple on Capitol Hill since 1954.  Just 3 blocks from Key Arena and with happy hour specials that can't be beat, Ozzie's is perfect for a quick lunch, an after work beer, cheering on the home team, or cutting loose on the weekends!
+            </p>
+        </div>
+        <div class="sec1img">
+            <img src="img/ozzies-outside.jpg" alt="A picture of the outside of Ozzie's bar">
+        </div>
+        <div class="sec2">
+            <h2>
+                Karaoke 7 Nights a Week
+            </h2>
+            <p>
+                Ozzie's has karaoke at the ready 7 nights a week with 2 karaoke stages on Friday and Saturday nights.  Come show off your singing skills.  Can't sing?  Maybe a couple of our signature cocktails will be just the thing to take the edge off and convince you that you just might be the next American Idol.
+            </p>
+        </div>
+        <div class="sec2img">
+            <img src="img/karaoke.jpg" alt="Karaoke Mic">
+        </div>
         </main>
         <section <!-- /scripts /-->
             <script src="js/vendor/modernizr-3.5.0.min.js"></script>
@@ -61,6 +82,9 @@
         </section> 
     </body>
 </html>
-<section>
-        <footer class="textbackground">This website and its content as well as styling are the sole property of Nick Hearon and may not be used, republished, or copied without written permission.  Copyright &copy; 2018 Nick Hearon.</footer>
+<section class="footer">
+    <hr>
+    <footer class="textbackground">
+        This website and its content as well as styling are the sole property of Nick Hearon and may not be used, republished, or copied without written permission.  Copyright &copy; 2018 Nick Hearon.
+    </footer>
 </section>
