--- a/index.html
+++ b/index.html
@@ -50,28 +50,52 @@
                     </ul>
                 </nav>
             </section>
-        <div class="sec1">
-            <h2>
-                Welcome to Ozzie's Five Star Dive Bar!
-            </h2>
-            <p>
-                Ozzie's has been a staple on Capitol Hill since 1954.  Just 3 blocks from Key Arena and with happy hour specials that can't be beat, Ozzie's is perfect for a quick lunch, an after work beer, cheering on the home team, or cutting loose on the weekends!
-            </p>
-        </div>
-        <div class="sec1img">
-            <img src="img/ozzies-outside.jpg" alt="A picture of the outside of Ozzie's bar">
-        </div>
-        <div class="sec2">
-            <h2>
-                Karaoke 7 Nights a Week
-            </h2>
-            <p>
-                Ozzie's has karaoke at the ready 7 nights a week with 2 karaoke stages on Friday and Saturday nights.  Come show off your singing skills.  Can't sing?  Maybe a couple of our signature cocktails will be just the thing to take the edge off and convince you that you just might be the next American Idol.
-            </p>
-        </div>
-        <div class="sec2img">
-            <img src="img/karaoke.jpg" alt="Karaoke Mic">
-        </div>
+            <body class="body">
+                <div class="sec1">
+                    <h2>
+                        Welcome to Ozzie's Five Star Dive Bar!
+                    </h2>
+                    <p>
+                        Ozzie's has been a staple on Capitol Hill since 1954.  Just 3 blocks from Key Arena and with happy hour specials that can't be beat, Ozzie's is perfect for a quick lunch, an after work beer, cheering on the home team, or cutting loose on the weekends.
+                    </p>
+                </div>
+                <div class="sec1img">
+                    <img src="img/ozzies-outside.jpg" alt="A picture of the outside of Ozzie's bar">
+                </div>
+                <div class="sec2">
+                    <h2>
+                        Karaoke 7 Nights a Week
+                    </h2>
+                    <p>
+                        Ozzie's has karaoke at the ready 7 nights a week with 2 karaoke stages on Friday and Saturday nights.  Come show off your singing skills.  Can't sing?  Maybe a couple of our signature cocktails will be just the thing to take the edge off and convince you that you just might be the next American Idol.
+                    </p>
+                </div>
+                <div class="sec2img">
+                    <img src="img/karaoke.jpg" alt="Karaoke Mic">
+                </div>
+                <div class="sec3">
+                    <h2>
+                        Bloodies and Benedict?
+                    </h2>
+                    <p>
+                        We offer breakfast 7 days a week! Serving up all your classics like Eggs Benedict, pancakes, omelets and French toast. But we have many signature Ozzie's items! Corned Beef Hash, Hand Pounded and breaded chicken fried steak and skillets. Don't forget to round out your breakfast or brunch with a bloody mary, a mimosa or try one of our house drinks like a raspberry Vohito!
+                    </p>
+                </div>
+                <div class="sec3img">
+                    <img src="img/breakfast.jpg" alt="Breakfast Served Monday to Friday from 10 to 2 and Saturday and Sunday from 9 to 2">
+                </div>
+                <div class="sec4">
+                    <h2>
+                        Live DJ's Thursday to Saturday
+                    </h2>
+                    <p>
+                        Ozzie's has live DJ's on Thursday, Friday and Saturday.  Come down and get down with DJ's Niros, Sessions, Eric Nelson, and Harsh!  For more info on who is performing, check out out our events calendar!
+                    </p>
+                </div>
+                <div class="sec4img">
+                    <img src="img/dj.jpeg" alt="DJ">
+                </div>
+            </body>
         </main>
         <section <!-- /scripts /-->
             <script src="js/vendor/modernizr-3.5.0.min.js"></script>
