Almost all pages aside from social media complete

--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,9 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="">Events Calendar</a></li>
-                        <li><a href="">Entertainment</a></li>
-                        <li><a href="">Social Media</a></li>
-                        <li><a href="">Sports</a></li>
-                        <li><a href="">Private Events</a></li>
+                        <li><a href="social.html">Social Media</a></li>
+                        <li><a href="sports.html">Sports</a></li>
+                        <li><a href="privatevents.html">Private Events</a></li>
                         <li id="currentpage"><a href="">Contact Us</a></li>
                     </ul>
                 </nav>
@@ -63,6 +61,12 @@
                     <p>
                         Monday - Friday: 11AM - 2AM
                         Saturday &amp; Sunday: 9AM - 2AM
+                    </p>
+                    <h2>
+                        Phone
+                    </h2>
+                    <p>
+                        <a href="tel:+1-206-284-4618">206-284-4618</a>
                     </p>
                 </div>
             </body>
